--- a/baocaotuan3/chude18_tuan3/pubspec.yaml
+++ b/baocaotuan3/chude18_tuan3/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   flutter_bloc: ^8.1.4
   equatable: ^2.0.5
+  shared_preferences: ^2.3.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
